@@ -41,10 +41,22 @@ simple way to provide a "remote" that is actually local to the same JVM.
 
 See: link:https://issues.apache.org/jira/browse/TINKERPOP-1756[TINKERPOP-1756]
 
-Changes to match()
-~~~~~~~~~~~~~~~~~~
 
-The `match()`-step has been generalized to suppor the local scoping of all barrier steps, not just reducing barrier steps.
+Remote Traversal Timeout
+^^^^^^^^^^^^^^^^^^^^^^^^
+
+There was limited support for "timeouts" with remote traversals (i.e. those traversals executed using the `withRemote()`
+option) prior to 3.2.7. Remote traversals will now interrupt on the server using the `scriptEvaluationTimeout`
+setting in the same way that normal script evaluations would. As a reminder, interruptions for traversals are always
+considered "attempts to interrupt" and may not always succeed (a graph database implementation might not respect the
+interruption, for example).
+
+See: link:https://issues.apache.org/jira/browse/TINKERPOP-1770[TINKERPOP-1770]
+
+Modifications to match()
+^^^^^^^^^^^^^^^^^^^^^^^^
+
+The `match()`-step has been generalized to support the local scoping of all barrier steps, not just reducing barrier steps.
 Previously, the `order().limit()` clause would have worked globally yielding:
 
 [source,groovy]
@@ -73,6 +85,8 @@ Note that this is not that intense of a breaking change as all of the reducing b
 This includes steps like `count()`, `min()`, `max()`, `sum()`, `group()`, `groupCount()`, etc. This update has now
 generalized this behavior to all barriers and thus, adds `aggregate()`, `dedup()`, `range()`, `limit()`, `tail()`, and `order()`
 to the list of locally computed clauses.
+
+See: link:https://issues.apache.org/jira/browse/TINKERPOP-1764[TINKERPOP-1764]
 
 TinkerPop 3.2.6
 ---------------
